apps/app-jrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-jrr
  namespace: app-jrr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-jrr
  template:
    metadata:
      labels:
        app: app-jrr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: app-jrr
          image: 676206941382.dkr.ecr.eu-west-1.amazonaws.com/app-jrr
          volumeMounts:
            - name: persistent-storage
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: s3-pvc-jrr
