apps/app-jrr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-jrr-service
spec:
  type: ClusterIP
  selector:
    app: app-jrr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
