apps/app-jrr/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-jrr-vs
spec:
  hosts:
    - "app-jrr.test.com"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: app-jrr-service.app-jrr.svc.cluster.local
            port:
              number: 80
